# screenRecorder

./: .gitignore  CMakeLists.txt  README.md  build.sh
lib/: CMakeLists.txt
lib/include/: AreaSelector.h  Common.h  GetAudioDevices.h  MemoryCheck.h  ScreenRecorder.h  SettingsConf.h
lib/src/: AreaSelector.cpp  GetAudioDevices.cpp  MemoryCheck.cpp  ScreenRecorder.cpp  SettingsConf.cpp
media/: .gitignore
test/: CMakeLists.txt
test/src/: main.cpp
